aggiunto css style

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <main>
         <section class="container">
             <div class="row">
-                <div class="col">
+                <div class="col bg-dark text-white py-4 px-5">
                     
-                    
+
+                    <h2>Terminale</h2>
+                    <p class="orange px-3" id="i-like-train"></p>
 
 
 
