ora i km posso essere aggiunti anche con decimali

--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
     <main>
         <section class="container">
             <div class="row">
-                <div class="col bg-dark text-white py-4 px-5">
-                    
-
-                    <h2>Terminale</h2>
-                    <p class="orange px-3" id="i-like-train"></p>
-
-
-
-
-
+                <div class=" col bg-dark p-5">
+                    <h2 class="bg-white">Terminale:</h2>
+                    <p class="orange p-3 bg-dark text-center fs-2" id="i-like-train"></p>
                 </div>
             </div>
         </section>
